# marlim3

./: .flake8  .gitattributes  .gitignore  .readthedocs.yaml  CMakeLists.txt  CMakePresets.json  MANIFEST.in  README.md  _version.py  mkdocs.yml  pyproject.toml  run_cleanup.py  setup.py
.github/scripts/: wait_for_pypi_release.py
.github/workflows/: build-test-release.yml  build.yml  python-publish.yml  test-develop.yml
demos/: 2zonas-2VGLs-2-Check-correcPerfTerm_en.json  2zones-2GLVs-2-Check-PA.mr3  2zones-2GLVs-2-Check-SA.json  2zones-2GLVs-2-Check-SA_en.json  2zones-2GLVs-2-Check-correcThermProf.json  2zones-2GLVs-2-Check-correcThermProf.mr3  BCS-longo-eficMotor_en.json  MultiBCS.json  MultiBCS_en.json  MultiESP.json  MultiESP.mr3  extended-ESP-pumpEfic.json  extended-ESP-pumpEfic.mr3  extended-shutdown-combined-ESP-CGL-PIG-complete.json  injec-Liq-ResidenceTime.json  parada-longo-Combinado-BCS-GLC-PIG-completo_en.json  simplifiedProduction.json
demos/pt-br/: 2zonas-2VGLs-2-Check-AP.mr3  2zonas-2VGLs-2-Check-AS.json  2zonas-2VGLs-2-Check-correcPerfTerm.json  2zonas-2VGLs-2-Check-correcPerfTerm.mr3  BCS-longo-eficMotor.json  MultiBCS.json  injec-Liq-TempoResidencia.json  injec-Liq-TempoResidencia.mr3  parada-longo-Combinado-BCS-GLC-PIG-completo.json  parada-longo-Combinado-BCS-GLC-PIG-completo.mr3  producaoSimplificado.mr3
docs/: index.md  schema_branch.json  schema_tramo.json  translations.md
docs/reference/: json-schema.md
docs/tutoriais/: 1-horizontal_vertical_comparison.ipynb  2-nodal_analysis.ipynb  3-gas_lift.ipynb  4_black_box_correlations.ipynb  base_case1_tutorials.json
docs/tutorials/: 1-horizontal_vertical_comparison.ipynb  2-nodal_analysis.ipynb  3-gas_lift.ipynb  4_black_box_correlations.ipynb  5_temperature_pulse.ipynb  base_case1_tutorials.json  base_case1_tutorials.mr3  base_case_vgl_tutorials.json  base_case_vgl_tutorials.mr3  index.md
docs/user-guide/: accessories.md  boundary-conditions.md  cross-sections.md  fluids.md  general.md  materials.md  pipes.md  results.md  rock-formation.md  time.md
gui/: __init__.py  app.py  build_desktop.py  desktop.py
gui/packaging/: marlim3-desktop.spec
gui/packaging/hooks/: hook-PySide6.QtQml.py
gui/packaging/linux/: AppRun  br.com.petrobras.marlim3.appdata.xml  br.com.petrobras.marlim3.desktop
issues/: new-sisprod.md  sisprod-migration-plan.md
marlim3/: __init__.py  _download.py  _output_headers.py  _process.py  translations.json
marlim3/_cenarios/: _cenarios.py
marlim3/_conversores/: _conversor_marlim3_tplppl.py
marlim3/_conversores/_conversor_mr2/: __init__.py  _converter.py  _mr2_reader.py  _mr2_simulator.py  spec.md
marlim3/_plots/: _plots_geometria.py  _plots_perfis.py  _plots_tends.py
marlim3/_rede/: _rede.py
marlim3/_tramo/: _branch.py  _keys.py  _tramo.py
marlim3_desktop/: README.md  __init__.py  __main__.py  build.py  checkpoints.py  launcher.py  logs.py  paths.py  processes.py  splash.py
marlim3_desktop/assets/icons/: app-icon.icns
marlim3_desktop/packaging/: marlim3-desktop.spec
marlim3_desktop/packaging/hooks/: hook-PySide6.QtWebEngineCore.py
marlim3_desktop/packaging/linux/: br.com.petrobras.marlim3.appdata.xml  br.com.petrobras.marlim3.desktop
scripts/: apply_renames.py  compare_keys.py  find_old_keys.py  gen_translations.py
src/: Acidentes2.cpp  Bcsm2.cpp  Elem2D.cpp  Elem2DPoroso.cpp  FA_Hidratos_Servico.cpp  FA_Hidratos_Servico.h  FonteMassCHK.cpp  GradientCorrelations.h  JSONDataModel.h  Leitura.cpp  Leitura.h  LeituraVapor.cpp  Makefile  Num4Main.cpp  PorosoRad-Simples.cpp  PorosoRad.cpp  PropFlu.cpp  PropFluCol.cpp  PropVapor.cpp  SisProd.cpp  SisProd.h  SisProdVap.cpp  TrocaCalor.cpp  acessorios.h  celRad-Simples.cpp  celula3.cpp  celula3.h  celulaVapor.cpp  chokegas.cpp  dados1Poroso.cpp  dados3DPoisson.cpp  estrat.cpp  estrat.h  mapa.cpp  multiBCS.cpp  multiBCS.h  solver.cpp  solver3DPoisson.cpp  validaTipoJson.cpp  validaTipoJson.h
src/core/: Acidentes2.cpp  Bcsm2.cpp  BlackOilProperties.cpp  BombaVol.cpp  ChokeGas.cpp  DriftFluxCorrelations.cpp  Elem2D.cpp  Elem2DPoisson.cpp  Elem2DPoroso.cpp  Elem3DPoisson.cpp  FA_Hidratos.cpp  FA_Hidratos_Servico.cpp  FerramentasNumericas.cpp  FonteMas.cpp  FonteMasVap.cpp  FonteMassCHK.cpp  GomezModel.cpp  GradientCorrelations.cpp  HydraulicFriction.cpp  JSONDataModel.cpp  JSONKeyTranslator.cpp  JSON_entrada.cpp  Leitura.cpp  LeituraVapor.cpp  LerAP.cpp  LerAS.cpp  LerRede.cpp  Log.cpp  Malha2D.cpp  Malha2DPoisson.cpp  Malha2DPoroso.cpp  Malha3DPoisson.cpp  Matriz.cpp  Num4Main.cpp  PorosoRad-Simples.cpp  PorosoRad.cpp  PressureGradientEngine.cpp  PropFlu.cpp  PropFluCol.cpp  PropFluColVF.cpp  (+31 more)
src/fortran/: BlackOilFromCompositional.f90  BlackOilModels.f90  Constants.f90  DebugFacilities.f90  FlashExtras.f90  MarlimComposicional.f90
src/include/: Acidentes2.h  Bcsm2.h  BlackOilProperties.h  ChokeGas.h  CorrelationFits.h  DriftFluxCorrelations.h  Elem2D.h  Elem2DPoisson.h  Elem2DPoroso.h  Elem3DPoisson.h  FA_Hidratos.h  FA_Hidratos_Servico.h  FerramentasNumericas.h  FonteMas.h  FonteMasVap.h  Geometria.h  GeometriaPoro.h  GomezModel.h  GradientCorrelations.h  HydraulicFriction.h  JSONDataModel.h  JSONKeyTranslator.h  JSON_entrada.h  Leitura.h  LeituraVapor.h  LerAP.h  LerAS.h  LerRede.h  Log.h  MarlimComposicional.h  Matriz.h  OutputI18n.h  PorosoRad-Simples.h  PorosoRad.h  PressureGradientEngine.h  PropFlu.h  PropFluCol.h  PropFluColVF.h  PropVapor.h  SisProd.h  (+31 more)
tests/: README.md  check_result.py  get_r02_refs.cpp  get_thermal_refs.cpp  run_models.py  sisprod2_selftest.cpp  sisprod_parity_tests.cpp  test_configure_simulation.py  test_demos_steady_state.py  test_desktop_core.py  test_download.py  test_gui_independence.py  test_marlim3.py  test_marlim3_desktop.py  test_notebooks.py  test_regression.py  test_schema_consistency.py  test_sisprod2.py  test_translations.py  test_wait_for_pypi_release.py  update_regression_references.py
tests/comparison/2zonas-2VGLs-2-Check-correcPerfTerm/: perfilProducao.csv  perfilServico.csv  tendP_5131.csv  tendP_7.csv
tests/comparison/BCS-longo-eficMotor/: perfilProducao.csv  (+3 more)
(+21 files in other folders)
