[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# ──────────────────────────────────────────────────────────────────────────────
# Project metadata  (single source of truth — setup.py only has CMake hooks)
# ──────────────────────────────────────────────────────────────────────────────
[project]
name = "marlim3"
dynamic = ["version"]   # version is read from _version.py via setup.py
description = "Simulação de escoamento multifásico permanente e transiente."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE.md"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scikit-learn",
    "pandas",
    "matplotlib",
    "openpyxl",
    "plotly",
    "seaborn",
    "networkx",
    "nbformat",
    "ipython",
    "jinja2",
    "requests",
]

[project.urls]
Homepage = "https://github.com/petrobras/marlim3"

# ──────────────────────────────────────────────────────────────────────────────
# Setuptools package discovery
# ──────────────────────────────────────────────────────────────────────────────
[tool.setuptools.packages.find]
include = ["marlim3", "marlim3.*"]

# ──────────────────────────────────────────────────────────────────────────────
# Development dependencies  (uv dependency groups — not shipped to end users)
# ──────────────────────────────────────────────────────────────────────────────
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov",
    "flake8",
    "jupyter",
    "nbconvert",
]

# ──────────────────────────────────────────────────────────────────────────────
# Tool configuration
# ──────────────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --durations=0 -s"
markers = [
    "simulacao: testes que executam o simulador Marlim3 (requerem executável compilado)",
]

[tool.coverage.run]
source = ["marlim3"]
omit = [
    "marlim3/__pycache__/*",
    "marlim3/_plots/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
